--- a/webui/templates/htmx/validators.jinja2
+++ b/webui/templates/htmx/validators.jinja2
@@ -1,4 +1,4 @@
-{% from "macros.jinja2" import nav, htmx_title, sync_notice %}
+{% from "macros.jinja2" import nav, htmx_title, sync_notice, UIAddress %}
 {{ sync_notice(sync_info) }}
 
     <div class="content">
@@ -25,7 +25,7 @@
                 {% for validator in validators %}
                     <tr>
                         <td>{{ loop.index + (page - 1) * 50 }}</td>
-                        <td><span class="mono"><a href="/address?a={{ validator.address }}">{{ validator.address }}</a></span></td>
+                        <td><span class="mono"><a href="/address?a={{ validator.address.address }}">{{ UIAddress(validator.address) }}</a></span></td>
                         <td>{{ validator.stake | format_aleo_credit | safe }}</td>
                         <td>{{ "%0.2f" | format(validator.stake / total_stake * 100) }}%</td>
                         <td>{{ "%0.2f" | format(validator.uptime) }}%</td>
