update header info

--- a/webui/templates/base.jinja2
+++ b/webui/templates/base.jinja2
@@ -13,11 +13,11 @@
                 "@type": "Person",
                 "name": "Haruka Ma"
             },
-            "url": "https://testnet.aleoscan.io/",
+            "url": "https://aleoscan.io/",
             "description": "AleoScan is an open source Aleo explorer. Explore the Aleo blockchain, find information about blocks, transactions, validators, programs and more. Formerly known as Haruka's Aleo Explorer.",
             "potentialAction": {
                 "@type": "SearchAction",
-                "target": "https://testnet.aleoscan.io/search?q={search_term_string}",
+                "target": "https://aleoscan.io/search?q={search_term_string}",
                 "query-input": "required name=search_term_string"
             }
         }
