add validator commission in list

--- a/webui/templates/htmx/validators.jinja2
+++ b/webui/templates/htmx/validators.jinja2
@@ -18,6 +18,7 @@
                     <th>Validator</th>
                     <th>Total stake</th>
                     <th>Vote power</th>
+                    <th>Commission</th>
                     <th>Uptime (last 24 hours)</th>
                 </tr>
                 </thead>
@@ -28,6 +29,7 @@
                         <td><span class="mono"><a href="/address?a={{ validator.address.address }}">{{ UIAddress(validator.address) }}</a></span></td>
                         <td>{{ validator.stake | format_aleo_credit | safe }}</td>
                         <td>{{ "%0.2f" | format(validator.stake / total_stake * 100) }}%</td>
+                        <td>{{ validator.commission }}%</td>
                         <td>{{ "%0.2f" | format(validator.uptime) }}%</td>
                     </tr>
                 {% endfor %}
