--- a/webui/templates/htmx/feedback.jinja2
+++ b/webui/templates/htmx/feedback.jinja2
@@ -21,6 +21,10 @@
             </div>
         {% endif %}
 
+        <div class="callout warning">
+            <p>Note: AleoScan is just an explorer. If you have issues with exchanges and / or wallets, please contact them directly. <strong>AleoScan feedback is NOT a support channel for your issues with them.</strong> Those "feedbacks" won't be answered.</p>
+        </div>
+
         <form action="/submit_feedback" method="post">
             <label>Contact (optional):
                 <input type="text" name="contact" placeholder="Email, Discord, etc." value="{{ contact }}">
