--- a/webui/templates/htmx/transaction.jinja2
+++ b/webui/templates/htmx/transaction.jinja2
@@ -6,6 +6,34 @@
             <h3>Transaction {{ tx_id_trunc }}</h3>
         </div>
 
+        {% if (transitions | length) == 1 and transitions[0].action in ("credits.aleo/transfer_public", "credits.aleo/transfer_public_to_private", "credits.aleo/transfer_private_to_public") %}
+            <div class="transfer-data" style="margin: 20px 4px;">
+            {% set future = transitions[0].obj.outputs[-1].future.value %}
+            {% call data_line("Transfer amount") %}
+                <strong>{{ future.arguments[-1].plaintext.literal.primitive | format_aleo_credit | safe }} Aleo credits</strong>
+            {% endcall %}
+            {% call data_line("Sender") %}
+                {% if transitions[0].action == "credits.aleo/transfer_private_to_public" %}
+                    Private
+                {% else %}
+                    <span class="mono"><a href="address?a={{ future.arguments[0] }}">{{ future.arguments[0] }}</a></span>
+                {% endif %}
+            {% endcall %}
+            {% call data_line("Recipient") %}
+                {% if transitions[0].action == "credits.aleo/transfer_public_to_private" %}
+                    Private
+                {% else %}
+                    {% if transitions[0].action == "credits.aleo/transfer_public" %}
+                        {% set arg_index = 1 %}
+                    {% else %}
+                        {% set arg_index = 0 %}
+                    {% endif %}
+                    <span class="mono"><a href="address?a={{ future.arguments[arg_index] }}">{{ future.arguments[arg_index] }}</a></span>
+                {% endif %}
+            {% endcall %}
+            </div>
+        {% endif %}
+
         <div id="data">
             {% call data_line("Transaction ID") %}
                 <span class="mono">{{ tx_id }}</span>
